--- a/index.html
+++ b/index.html
@@ -145,14 +145,16 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <p>
  <table border ="1px" cellpadding ="30px" cellspacing = "10px">
  <tr>
- <td> <img src=Ảnh/ "Chim to.png" </td>
- <td> ô 2 </td>
- <td> ô 3 </td>
+ <td> <img src="Ảnh/36.jpg" width = "250px" height = "auto"></td>
+ <td> <img src="Ảnh/trôn.jpg" width ="250px" height ="auto"></td>
+ <td> <img src="Ảnh/vân.jpg" width ="250px" height ="auto"></td>
+ <td> <img src="Ảnh/lùng.jpg" width ="250px" height ="auto"></td>
  </tr>
  <tr>
- <td> ô 6 </td>
- <td> ô 7 </td>
- <td> ô 8 </td>
+<td><img src="Ảnh/V.jpg" width = "250px" height = "auto" </td>
+ <td><img src="Ảnh/T.jpg" width = "250px" height = "auto" </td>
+ <td><img src="Ảnh/L.jpg" width = "250px" height = "auto" </td>
+ <td><img src="Ảnh/D.jpg" width = "250px" height = "auto" </td>
  </tr>
  </table>
  <p>
@@ -222,3 +224,4 @@ function hienThiTen(){
  </html>
  
  
+
