--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ p,li{
     font-size:18px;
     line-height:1.6;
 }
-
 img{
     max-width:100%;
-    border-radius:12px;
+    border-radius
+:12px;
     box-shadow:0 0 10px black;
 }
 
@@ -51,9 +51,6 @@ button:hover{
 </head>
 <body bgcolor = "white" background = "Ảnh/hồng.jpg"
 <body>
-<div class="container">
-
-<width="500px" height ="auto">
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 <p align = "center"><font size="5" face="Time new roman" color="red"> <b>SỐ NÀO LÀ SỐ TỔNG 9</b></font>
 
@@ -224,4 +221,5 @@ function hienThiTen(){
  </html>
  
  
+
 
