--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <table border ="1px" cellpadding ="30px" cellspacing = "10px">
  <tr>
  <td> <img src="Ảnh/36.jpg" width = "250px" height = "auto"></td>
- <td> <img src="Ảnh/trôn.jpg" width ="250px" height ="auto"></td>
+ <td> <img src="Ảnh/tron.jpg" width ="250px" height ="auto"></td>
  <td> <img src="Ảnh/vân.jpg" width ="250px" height ="auto"></td>
  <td> <img src="Ảnh/lùng.jpg" width ="250px" height ="auto"></td>
  </tr>
@@ -221,5 +221,6 @@ function hienThiTen(){
  </html>
  
  
+
 
 
