--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ button:hover{
 
 <title> Đây là trang của Anh Đức &hearts;&hearts;&hearts;</title>
 </head>
-<body bgcolor = "white" background = "Ảnh/pink.jpg"
-</body>
+<body bgcolor = "white" background = "Ảnh/pink.jpg">
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 <p align = "center"><font size="5" face="Time new roman" color="red"> <b>SỐ NÀO LÀ SỐ TỔNG 9</b></font>
 
@@ -221,6 +220,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
