--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Hôm nay thời tiết: 18<sup> o </sup>
  </audio>
  <video controls autoplay muted height =" 700px" width ="700px">
  <source src ="Video/Hà Linh.mp4" type ="video/mp4">
-     <source src = "Video/203c9465-f7ae-4a47-8dea-d02a6b686884.mp4" type ="video/mp4">
+     <source src = "Video/nd.mp4" type ="video/mp4">
      
  </video>
  <p>
@@ -222,6 +222,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
