--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@ button:hover{
 </head>
 <body bgcolor = "white" background = "Ảnh/pink.jpg">
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
-<p align = "center"><font size="5" face="Time new roman" color="red"> <b>SỐ NÀO LÀ SỐ TỔNG 9</b></font>
+<p <label> align = "center"><font size="5" face="Time new roman" color="red"> <b>SỐ NÀO LÀ SỐ TỔNG 9</b></font></p></label>
 
-<p> A: 18
+<p><input type =" radio" name "18" value= "vol"> A: 18
 
-<p> B: 36
+<p><input type =" radio" name "36" value= "vol"> B: 36
 
-<p> C: 63
+<p><input type =" radio" name "63" value= "vol"> C: 63
 
-<p> D: 81
+<p><input type =" radio" name "18" value= "vol"> D: 81
 
 <br> <b><font size ="5"> Ai là người trộm dép:</b>
 <ol type="A">
@@ -222,6 +222,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
