--- a/index.html
+++ b/index.html
@@ -53,23 +53,22 @@ button:hover{
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 <p <label> align = "center"><font size="5" face="Time new roman" color="red"> <b>SỐ NÀO LÀ SỐ TỔNG 9</b></font></p></label>
 
-<p><input type =" radio" name "18" value= "vol"> A: 18
+<p><input type ="checkbox" name "18" value= "vol">  18
 
-<p><input type =" radio" name "36" value= "vol"> B: 36
+<p><input type ="checkbox" name "36" value= "vol">  36
 
-<p><input type =" radio" name "63" value= "vol"> C: 63
+<p><input type ="checkbox" name "63" value= "vol">  63
 
-<p><input type =" radio" name "18" value= "vol"> D: 81
+<p><input type ="checkbox" name "18" value= "vol">  81
 
 <br> <b><font size ="5"> Ai là người trộm dép:</b>
-<ol type="A">
-<p> <li> 18
+<p> <input type ="checkbox" name "18" value= "vol"> 18
 
-<p> <li> 36
+<p> <input type ="checkbox" name "18" value= "vol"> 36
 
-<p> <li> ThanhHoaese
+<p> <input type ="checkbox" name "18" value= "vol"> ThanhHoaese
 
-<p> <li> HaiNgonese
+<p> <input type ="checkbox" name "18" value= "vol"> HaiNgonese
 <p  <font size =" 5"> <b>Cô Hái Mơ</b></font>
 
 <p> <i>Thở thẩn đường chiều một khách thơ,
@@ -222,6 +221,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
