--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ button:hover{
 </head>
 <body background = "Ảnh/pink.jpg">
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
-<p <label>< align = "center"><font size="5" face="Time new roman" color="red"> <b>Số nào là số tổng 9</b></font></p></label>
+<p> <label><font size="5" face="Time new roman" color="red"> <b>Số nào là số tổng 9</b></font></p></label>
 
 <p><input type ="checkbox" name "18" value= "vol">  18
 
@@ -61,7 +61,7 @@ Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 
 <p><input type ="checkbox" name "18" value= "vol">  81
 
-<br> <b><font size ="5" face ="Time new roman" color ="red"> Ai là người trộm dép:</b>
+<br> <b><font size ="5" face ="Time new roman" color ="red"> Ai là người trộm dép:</b></font>
 <p> <input type ="checkbox" name "18" value= "vol"> 18
 
 <p> <input type ="checkbox" name "18" value= "vol"> 36
@@ -221,6 +221,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
