--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 body{
     margin:0;
     font-family: Arial;
-    background: linear-gradient(120deg,#0f172a,#1e293b);
+    background: url("Ảnh/pink.jpg") no-repeat center center fixed;
+    background-size: cover;
     color:white;
 }
 
 .container{
     max-width:1000px;
     margin:auto;
-    background:#020617;
+    background: rgba(2,6,23,0.85);
     padding:30px;
     border-radius:20px;
     box-shadow:0 0 20px cyan;
+    backdrop-filter: blur(6px);
 }
 
 h1,h2{
@@ -26,10 +28,10 @@ p,li{
     font-size:18px;
     line-height:1.6;
 }
+
 img{
     max-width:100%;
-    border-radius
-:12px;
+    border-radius:12px;
     box-shadow:0 0 10px black;
 }
 
@@ -46,6 +48,7 @@ button:hover{
     background:#0ea5e9;
 }
 </style>
+
 
 <title> Đây là trang của Anh Đức &hearts;&hearts;&hearts;</title>
 </head>
@@ -221,6 +224,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
