--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <head>
 <style>
 body{
+    body{
     margin:0;
     font-family: Arial;
-    background: url("Ảnh/pink.jpg") no-repeat center center fixed;
-    background-size: cover;
-    color:white;
+    background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #bae6fd);
+    color:#0f172a;
+}
+
 }
 
 .container{
+    .container{
     max-width:1000px;
     margin:auto;
-    background: rgba(2,6,23,0.85);
+    background: white;
     padding:30px;
     border-radius:20px;
-    box-shadow:0 0 20px cyan;
-    backdrop-filter: blur(6px);
+    box-shadow:0 0 20px rgba(0,0,0,0.1);
+}
+
 }
 
 h1,h2{
@@ -224,6 +228,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
