--- a/index.html
+++ b/index.html
@@ -2,27 +2,23 @@
 <head>
 <style>
 body{
-    body{
     margin:0;
     font-family: Arial;
-    background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #bae6fd);
-    color:#0f172a;
-}
-
+    background: linear-gradient(135deg, #ffe4e6, #ffccd5, #ffafcc);
+    color:#2c2c2c;
 }
 
 .container{
-    .container{
     max-width:1000px;
     margin:auto;
-    background: white;
+    background: rgba(255, 255, 255, 0.9);
     padding:30px;
     border-radius:20px;
     box-shadow:0 0 20px rgba(0,0,0,0.1);
 }
 
+    
 }
-
 h1,h2{
     color:#38bdf8;
     text-align:center;
@@ -228,6 +224,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
