--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
 <head>
 <style>
+<style>
 body{
     margin:0;
     font-family: Arial;
-    background: linear-gradient(135deg, #ffe4e6, #ffccd5, #ffafcc);
     color:#2c2c2c;
+
+    /* NỀN HELLO KITTY */
+    background-image: url("images/hello_kitty.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .container{
@@ -17,8 +24,6 @@ body{
     box-shadow:0 0 20px rgba(0,0,0,0.1);
 }
 
-    
-}
 h1,h2{
     color:#38bdf8;
     text-align:center;
@@ -50,9 +55,10 @@ button:hover{
 </style>
 
 
+
 <title> Đây là trang của Anh Đức &hearts;&hearts;&hearts;</title>
 </head>
-<body background = "Ảnh/pink.jpg">
+<body></body>
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 <p> <label><font size="5" face="Time new roman" color="red"> <b>Số nào là số tổng 9</b></font></p></label>
 
@@ -129,8 +135,8 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <source src ="Music/KHÚC TÌNH CA THANH HOÁ REMIX - DUY DONG x VAN KHANG - m e i i   love   you.mp3" type="audio/mpeg">
  </audio>
  <video controls autoplay muted height =" 700px" width ="700px">
-
-     <source src = "Video/nd.mp4" type ="video/mp4">
+<scource src= "Video/Hà Linh.mp4" type ="video/mp4"
+     source src = "Video/nd.mp4" type ="video/mp4">
      
  </video>
  <p>
@@ -224,6 +230,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
