--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body{
     color:#2c2c2c;
 
     /* NỀN HELLO KITTY */
-    background-image: url("images/hello_kitty.jpg");
+    background-image: url("Ảnh/ok.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -135,8 +135,8 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <source src ="Music/KHÚC TÌNH CA THANH HOÁ REMIX - DUY DONG x VAN KHANG - m e i i   love   you.mp3" type="audio/mpeg">
  </audio>
  <video controls autoplay muted height =" 700px" width ="700px">
-<scource src= "Video/Hà Linh.mp4" type ="video/mp4"
-     source src = "Video/nd.mp4" type ="video/mp4">
+<scource src= "Video/Hà Linh.mp4" type ="video/mp4">
+     <source src = "Video/nd.mp4" type ="video/mp4">
      
  </video>
  <p>
@@ -230,6 +230,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
