--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@ body{
     margin:0;
     font-family: Arial;
     color:#2c2c2c;
-
-    /* NỀN HELLO KITTY */
     background-image: url("Ảnh/ok.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
 }
 
 .container{
@@ -58,7 +55,7 @@ button:hover{
 
 <title> Đây là trang của Anh Đức &hearts;&hearts;&hearts;</title>
 </head>
-<body></body>
+<body>
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 <p> <label><font size="5" face="Time new roman" color="red"> <b>Số nào là số tổng 9</b></font></p></label>
 
@@ -230,6 +227,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
