--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body{
     margin:0;
     font-family: Arial;
     color:#2c2c2c;
-    background-image: url("Ảnh/ok.jpg");
+    background-image: url("image/ok.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -131,8 +131,9 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <audio controls>
  <source src ="Music/KHÚC TÌNH CA THANH HOÁ REMIX - DUY DONG x VAN KHANG - m e i i   love   you.mp3" type="audio/mpeg">
  </audio>
- <video controls autoplay muted height =" 700px" width ="700px">
+ <video controls autoplay muted height =" 500px" width ="500px">
 <scource src= "Video/Hà Linh.mp4" type ="video/mp4">
+     <video controls autoplay muted height =" 500px" width ="500px">
      <source src = "Video/nd.mp4" type ="video/mp4">
      
  </video>
@@ -227,6 +228,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
