--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <source src ="Music/KHÚC TÌNH CA THANH HOÁ REMIX - DUY DONG x VAN KHANG - m e i i   love   you.mp3" type="audio/mpeg">
  </audio>
  <video controls autoplay muted height =" 500px" width ="500px">
-<scource src= "Video/Hà Linh.mp4" type ="video/mp4"
-     video controls autoplay muted height =" 500px" width ="500px"
-     source src = "Video/nd.mp4" type ="video/mp4">
+<scource src= "Video/Hà Linh.mp4" type ="video/mp4">
+    < video controls autoplay muted height =" 500px" width ="500px">
+     <source src = "Video/nd.mp4" type ="video/mp4">
      
  </video>
  <p>
@@ -228,6 +228,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
