--- a/index.html
+++ b/index.html
@@ -2,60 +2,10 @@
 <head>
 <style>
 <style>
-body{
-    margin:0;
-    font-family: Arial;
-    color:#2c2c2c;
-    background-image: url("image/ok.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.container{
-    max-width:1000px;
-    margin:auto;
-    background: rgba(255, 255, 255, 0.9);
-    padding:30px;
-    border-radius:20px;
-    box-shadow:0 0 20px rgba(0,0,0,0.1);
-}
-
-h1,h2{
-    color:#38bdf8;
-    text-align:center;
-}
-
-p,li{
-    font-size:18px;
-    line-height:1.6;
-}
-
-img{
-    max-width:100%;
-    border-radius:12px;
-    box-shadow:0 0 10px black;
-}
-
-button{
-    background:#38bdf8;
-    border:none;
-    padding:12px 20px;
-    border-radius:10px;
-    font-size:16px;
-    cursor:pointer;
-}
-
-button:hover{
-    background:#0ea5e9;
-}
-</style>
-
-
 
 <title> Đây là trang của Anh Đức &hearts;&hearts;&hearts;</title>
 </head>
-<body>
+<body background = "Ảnh/ok.jpg">
 Trang web chỉ dành cho <b><u><font size ="5">Haingonese!</u></b>
 <p> <label><font size="5" face="Time new roman" color="red"> <b>Số nào là số tổng 9</b></font></p></label>
 
@@ -131,12 +81,16 @@ Hôm nay thời tiết: 18<sup> o </sup>
  <audio controls>
  <source src ="Music/KHÚC TÌNH CA THANH HOÁ REMIX - DUY DONG x VAN KHANG - m e i i   love   you.mp3" type="audio/mpeg">
  </audio>
- <video controls autoplay muted height =" 500px" width ="500px">
-<scource src= "Video/Hà Linh.mp4" type ="video/mp4">
-    < video controls autoplay muted height =" 500px" width ="500px">
-     <source src = "Video/nd.mp4" type ="video/mp4">
-     
- </video>
+ <video controls autoplay muted width="500" height="500">
+    <source src="Video/HaLinh.mp4" type="video/mp4">
+</video>
+
+<br><br>
+
+<video controls autoplay muted width="500" height="500">
+    <source src="Video/nd.mp4" type="video/mp4">
+</video>
+
  <p>
  <object data= "File/Đề án môn học nhóm 11-D18KDTMTT1.pdf" width = "400" height = "300">
  </object>
@@ -228,6 +182,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
