--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-<style>
+</style>
 
 <title> Đây là trang của Anh Đức &hearts;&hearts;&hearts;</title>
 </head>
@@ -182,6 +182,7 @@ function hienThiTen(){
  </html>
  
  
+
 
 
 
